--- a/.github/workflows/test-js-action.yml
+++ b/.github/workflows/test-js-action.yml
@@ -7,6 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        
       - name: Hello world action step
         id: hello
         uses: yuuki1967/js-actions-learning@v1
