--- a/.github/workflows/test-js-action.yml
+++ b/.github/workflows/test-js-action.yml
@@ -15,7 +15,7 @@ jobs:
           tree
       - name: Hello world action step
         id: hello
-        uses: ./action.yml
+        uses: yuuki1967/js-actions-learning@v1
         with:
           who-to-greet: 'Mona the Octocat'
       # Use the output from the `hello` step
