--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "js-actions-learning",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "@actions/exec": "^1.1.1",
     "@actions/github": "^5.1.1"
   }
 }
